--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,10 +2,9 @@ name: MAIN
 on:
   #push:
   pull_request:
-    types:
-      - closed
-    branches:
-       - master
+    # types:
+    #   - closed
+   branches: [ "master" ]
   workflow_dispatch: 
 
 jobs:
