--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,19 +2,19 @@ name: MAIN
 on:
   #push:
   pull_request:
-    types:
-       - closed
-    #   - synchronize
-    #   - labeled
-    # paths:
-    #   - '**/*'  
+    # types:
+    #    - closed
+    # #   - synchronize
+    # #   - labeled
+    # # paths:
+    # #   - '**/*'  
     branches:
-      - dev 
+      -  master
   workflow_dispatch: 
 
 jobs:
   security_scan:
-      # if: github.event.pull_request.merged == true && github.head_ref == 'dev'
+      if: github.event.pull_request.merged == true && github.head_ref == 'master'
       name: GGshield
       uses: ./.github/workflows/ggshield.yml
       secrets: inherit
