--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,8 +2,9 @@ name: MAIN
 on:
   #push:
   pull_request:
-    # types:
-    #    - closed
+
+    types:
+       - closed
     # #   - synchronize
     # #   - labeled
     # # paths:
@@ -14,7 +15,7 @@ on:
 
 jobs:
   security_scan:
-      if: github.event.pull_request.merged == true && github.head_ref == 'master'
+      if: github.event.pull_request.merged == true && github.event.pull_request.closed == true && github.head_ref == 'master'
       name: GGshield
       uses: ./.github/workflows/ggshield.yml
       secrets: inherit
