--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,15 +2,7 @@ name: MAIN
 on:
   #push:
   pull_request:
-    types:
-       - closed
-    # #   - synchronize
-    # #   - labeled
-    # # paths:
-    # #   - '**/*'  
-    branches:
-      -  master
-      -  dev
+    branches: [ master ]
   workflow_dispatch: 
 
 jobs:
