--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,12 +4,12 @@ on:
     types:
       - closed
     branches:
-      - uat
       - dev
   workflow_dispatch:
   
 jobs:
   security_scan:
+      if: github.event.pull_request.merged == true && github.head_ref == 'dev'
       name: GGshield
       uses: ./.github/workflows/ggshield.yml
       secrets: inherit
