--- a/.github/workflows/npmbuild_and_test.yaml
+++ b/.github/workflows/npmbuild_and_test.yaml
@@ -20,6 +20,7 @@ jobs:
       run: |
         npm update caniuse-lite browserslist
         npm install karma-junit-reporter --save-dev
+        npm install karma-xml-reporter --save-dev
       
     - name: Installation
       run: npm install
