--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,25 +2,31 @@ name: docker build push trivy scanning
 on:
   workflow_call:
   workflow_dispatch:
-
+  
 jobs:
     docker_build_push:
           runs-on: ubuntu-latest
           steps:
           - name: Checkout
             uses: actions/checkout@v3
-          - name: Login to DockerHub
-            uses: docker/login-action@v2
             with:
-                username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKER_TOKEN }}
+               repository: '${{ secrets.CHECKOUT_REPO }}'
+         
+          - name: Login to DockerHub
+            uses: azure/docker-login@v1
+            with:
+              login-server: githubactionregistory.azurecr.io
+              username: ${{ secrets.ACR_USERNAME }}
+              password: ${{ secrets.ACR_PASSWORD }}
+              
           - name: Build Container image
-            run: docker build -t ${{ secrets.DOCKER_REPO }}:${{ github.run_number }} .
- 
+            run: docker build -t ${{ secrets.ACR_REPO }}:${{ github.run_number }} .
+          
+
           - name: Run Trivy vulnerability scanner
             uses: aquasecurity/trivy-action@master
             with:
-                  image-ref: '${{ secrets.DOCKER_REPO }}:${{ github.run_number }}'
+                  image-ref: '${{ secrets.ACR_REPO }}:${{ github.run_number }}'
                   format: 'sarif'
                   output: 'trivy-results.sarif'
         
@@ -30,4 +36,4 @@ jobs:
                 sarif_file: 'trivy-results.sarif'
           
           - name: Publish Docker image
-            run: docker push ${{ secrets.DOCKER_REPO }}:${{ github.run_number }}
+            run: docker push ${{ secrets.ACR_REPO }}:${{ github.run_number }}
