--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,6 +2,7 @@ name: docker build push trivy scanning
 on:
   workflow_call:
   workflow_dispatch:
+
   
 permissions:
   contents: read
@@ -9,7 +10,7 @@ permissions:
 jobs:
     docker_build_push:
           permissions:
-            contents: read # for actions/checkout to fetch code
+            contents: read 
             security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
             actions: read # only required for a private repository by github/codeql-action/upload-sa
           runs-on: ubuntu-latest
