--- a/.github/workflows/npmbuild_and_test.yaml
+++ b/.github/workflows/npmbuild_and_test.yaml
@@ -35,7 +35,7 @@ jobs:
       
     - name: test
       run: npm run test-headless && exit 0
-      continue-on-error: true
+      #continue-on-error: true
       
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
